--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 ko_fi: dragomano
-custom: ["https://www.buymeacoffee.com/bugo", "https://qiwi.com/n/DRAGOMANO"]
+custom: ['https://www.buymeacoffee.com/bugo']
